--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.finalxcmeettracker/com.example.finalxcmeettracker.HelloApplication
+                            <mainClass>com.example.finalxcmeettracker/com.example.finalxcmeettracker.SplashScreen
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
